RegressionTests/TestSuiteExport/reject/inline_asm_undefined_variable.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmUndefinedVariable

fn f() void {
    asm {
        MOV {missing}, #1
    };
}